--- a/hafta3/stil.css
+++ b/hafta3/stil.css
@@ -463,17 +463,93 @@ textarea {
 }
 
 .duyuruetkinlikbaslik{
-    text-transform: uppercase;
     color: black;
-    border-bottom: 1px dashed gray;
+    border-bottom: 1.5px dashed gray;
+    margin-bottom: 15px;
+    color: gray;
+    font-family: Raleway,sans-serif;
+    font-weight: 500;
 }
 
 #duyuru{
     float: left;
-    width: 50%;
+    width: 48%;
 }
 
 #etkinlik{
-    width: 50%;
+    width: 48%;
     float: right;
 }
+
+.tarih{
+    float: left;
+    background-color: #626262;
+    width: 30px;
+    height: 30px;
+    padding: 5px;
+    color: white;
+    text-align: center;
+    border: 4px solid white;
+}
+
+.duyurueleman{
+
+    height: 55px;
+    position: relative;
+    border-bottom: 0.2px dotted gray;
+}
+
+.vertical-center {
+    margin: 0;
+    position: absolute;
+    left: 60px;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+  }
+
+#faydalilinkler{
+    height: 90px;
+    margin-top: 20px;
+    background-color: #347A98;
+}
+
+.buton{
+    float: left;
+    margin-right: 20px;
+    padding: 20px;
+    text-align: center;
+    color:white;
+}
+
+.buton a{
+    color: white;
+    text-decoration: none;
+}
+.buton a i{
+    font-size: 40px;
+}
+
+#istatistik{
+    height: 100px;
+    margin-top: 20px;
+    background-color: #F6F7F7;
+}
+
+.kutu{
+    padding: 20px;
+    float: left;
+    background-color: #F2F3F4;
+    color: black;
+}
+
+.kutu a{
+    color: #4A7C9D;
+    text-decoration: none;
+}
+
+.sayi{
+    font-size: 30px;
+    font-weight: 700;
+}
+
